--- a/flappy_slime.html
+++ b/flappy_slime.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta content="Adobe_Animate_CC2021" name="authoring-tool">
     <title>Flappy Slime</title>
-    <link rel="shortcut icon" href="./images/slime.png">
+    <link href="./images/slime.png" rel="shortcut icon">
     <style>
         #animation_container {
             position: absolute;
@@ -43,6 +43,19 @@
             width: 288px;
             height: 512px;
             z-index: 2;
+            animation: loadingBorder 0.6s linear infinite;
+        }
+
+        @keyframes loadingBorder {
+            0% {
+                border: 0 solid limegreen
+            }
+            50% {
+                border: 4px solid limegreen
+            }
+            100% {
+                border: 0 solid limegreen
+            }
         }
 
         #loading > img {
