--- a/flappy_slime.html
+++ b/flappy_slime.html
@@ -43,7 +43,7 @@
             width: 288px;
             height: 512px;
             z-index: 2;
-            animation: loadingBorder 0.6s linear infinite;
+            animation: loadingBorder 0.6s ease infinite;
         }
 
         @keyframes loadingBorder {
